Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/WST_Dealer__c.object-meta.xml
<CustomObject>
    <label>WST-Dealer</label>
    <nameField>
        <displayFormat>WST-{00000}</displayFormat>
        <label>WST Dealer Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WST-Dealer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>