Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/fields/DEALER_FIRM_NAME__c.field-meta.xml
<CustomField>
    <fullName>DEALER_FIRM_NAME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEALER FIRM NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WST-Dealer (DEALER FIRM NAME)</relationshipLabel>
    <relationshipName>WST_Dealer1</relationshipName>
    <type>Lookup</type>
</CustomField>