Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/fields/MOBILE_No__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_No__c</fullName>
    <label>MOBILE NUMBER</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>