Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/fields/PIN_CODE__c.field-meta.xml
<CustomField>
    <fullName>PIN_CODE__c</fullName>
    <label>PIN CODE</label>
    <length>6</length>
    <type>Text</type>
</CustomField>