Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/fields/Sparsh_code__c.field-meta.xml
<CustomField>
    <fullName>Sparsh_code__c</fullName>
    <label>SPARSH CODE</label>
    <length>35</length>
    <type>Text</type>
</CustomField>