Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/fields/Town_Name__c.field-meta.xml
<CustomField>
    <fullName>Town_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CITY / TOWN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.STATE__c</field>
            <operation>equals</operation>
            <valueField>Town_Master__c.State__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Town_Master__c</referenceTo>
    <relationshipLabel>WST-Dealer</relationshipLabel>
    <relationshipName>WST_Dealer</relationshipName>
    <type>Lookup</type>
</CustomField>