Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/fields/WST_DP_NAME__c.field-meta.xml
<CustomField>
    <fullName>WST_DP_NAME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WST DP NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WST-Dealer</relationshipLabel>
    <relationshipName>WST_Dealer</relationshipName>
    <type>Lookup</type>
</CustomField>