Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN(MOBILE_No__c )&lt;&gt; 10,NOT(ISNUMBER(MOBILE_No__c )))</errorConditionFormula>
    <errorDisplayField>MOBILE_No__c</errorDisplayField>
    <errorMessage>Enter 10 digit mobile number</errorMessage>
</ValidationRule>