Partial_14Dec2021/force-app/main/default/objects/WST_Dealer__c/validationRules/Pin_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pin_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN( PIN_CODE__c )&lt;&gt; 6,NOT(ISNUMBER(PIN_CODE__c )))</errorConditionFormula>
    <errorDisplayField>PIN_CODE__c</errorDisplayField>
    <errorMessage>Enter 6 digit Pin Code.</errorMessage>
</ValidationRule>